overflow fixed

--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,14 @@
   outline: none; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  overflow-x: hidden; }
 
 body {
-  scroll-behavior: smooth;
-  overflow-x: hidden;
   font-family: 'Noto Serif Georgian', serif;
-  font-family: 'Red Hat Text', sans-serif; }
+  font-family: 'Red Hat Text', sans-serif;
+  scroll-behavior: smooth;
+  overflow-x: hidden; }
 
 .navigation {
   position: fixed;
@@ -78,8 +79,8 @@ body {
   display: flex;
   justify-content: center; }
   .nav--item .emoji {
-    width: 26rem;
-    height: 9rem; }
+    width: 14rem;
+    height: 8rem; }
     @media (min-width: 500px) and (max-width: 850px) {
       .nav--item .emoji {
         width: 82rem; } }
@@ -138,8 +139,8 @@ body {
 
 .active-navigation-nav {
   position: fixed;
-  top: 5rem;
-  left: 0rem;
+  top: 13rem;
+  left: 5rem;
   text-align: center;
   transition: all .2s; }
   @media (min-width: 500px) and (max-width: 850px) {
